--- a/SampleRss/Base.lproj/Main.storyboard
+++ b/SampleRss/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="gqS-ti-IPV" style="IBUITableViewCellStyleDefault" id="ral-1c-haT">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" textLabel="gqS-ti-IPV" style="IBUITableViewCellStyleDefault" id="ral-1c-haT">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ral-1c-haT" id="wKP-GB-dUs">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -26,6 +26,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="agf-ir-fWq" kind="push" identifier="showDetails" id="kvd-QV-xyF"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <sections/>
@@ -39,6 +42,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YLC-0K-4Ua" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1023" y="-91"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="yjD-SK-Y9q">
+            <objects>
+                <viewController id="agf-ir-fWq" customClass="DetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6DY-hE-bZQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="IlK-tp-SmG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="z2f-qc-nJx">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="jGA-dm-Hp0"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mz1-6i-GDv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1770" y="-91"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fih-Op-xlK">
@@ -56,7 +78,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="52k-dC-2cV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="167" y="-163"/>
+            <point key="canvasLocation" x="193" y="-91"/>
         </scene>
     </scenes>
 </document>
