--- a/SampleRss/Base.lproj/Main.storyboard
+++ b/SampleRss/Base.lproj/Main.storyboard
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--SampleRssReader-->
         <scene sceneID="Pcj-PK-mfb">
             <objects>
                 <tableViewController id="nVM-ma-Epf" customClass="TableViewController" sceneMemberID="viewController">
@@ -13,7 +13,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" id="ral-1c-haT">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="ral-1c-haT">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ral-1c-haT" id="wKP-GB-dUs">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -29,7 +29,7 @@
                             <outlet property="delegate" destination="nVM-ma-Epf" id="4iG-zQ-7GM"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="nGh-F2-REq"/>
+                    <navigationItem key="navigationItem" title="SampleRssReader" id="nGh-F2-REq"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YLC-0K-4Ua" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -57,11 +57,30 @@
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="U91-BR-xTz">
                                 <rect key="frame" x="0.0" y="64" width="600" height="3"/>
                             </progressView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JUz-q9-pFg">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="undo" id="18R-uh-Pqh">
+                                        <connections>
+                                            <action selector="goBack" destination="DXP-Ba-feS" id="OO2-AH-dlg"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="dM0-m3-lG1"/>
+                                    <barButtonItem systemItem="refresh" id="c1S-rq-Pkw">
+                                        <connections>
+                                            <action selector="reload" destination="DXP-Ba-feS" id="cp4-Ee-vQg"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="JUz-q9-pFg" firstAttribute="leading" secondItem="z2f-qc-nJx" secondAttribute="leading" id="AgZ-38-oWk"/>
                             <constraint firstItem="DXP-Ba-feS" firstAttribute="leading" secondItem="z2f-qc-nJx" secondAttribute="leading" id="K90-Mk-Bmc"/>
                             <constraint firstItem="U91-BR-xTz" firstAttribute="leading" secondItem="z2f-qc-nJx" secondAttribute="leading" id="U3a-gu-9hp"/>
+                            <constraint firstAttribute="trailing" secondItem="JUz-q9-pFg" secondAttribute="trailing" id="UFO-8a-UF2"/>
+                            <constraint firstItem="IlK-tp-SmG" firstAttribute="top" secondItem="JUz-q9-pFg" secondAttribute="bottom" id="XpI-ji-Di8"/>
                             <constraint firstAttribute="trailing" secondItem="U91-BR-xTz" secondAttribute="trailing" id="nt1-gG-wfV"/>
                             <constraint firstItem="IlK-tp-SmG" firstAttribute="top" secondItem="DXP-Ba-feS" secondAttribute="bottom" id="okH-Cy-kAB"/>
                             <constraint firstAttribute="trailing" secondItem="DXP-Ba-feS" secondAttribute="trailing" id="vtV-na-HTG"/>
