--- a/SampleRss/Base.lproj/Main.storyboard
+++ b/SampleRss/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14D72i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TVg-Ih-C9m">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--SampleRssReader-->
@@ -60,6 +61,9 @@
                             </progressView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JUz-q9-pFg">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="4fe-UF-moU"/>
+                                </constraints>
                                 <items>
                                     <barButtonItem systemItem="undo" id="18R-uh-Pqh">
                                         <connections>
@@ -89,7 +93,7 @@
                             <constraint firstAttribute="trailing" secondItem="JUz-q9-pFg" secondAttribute="trailing" id="UFO-8a-UF2"/>
                             <constraint firstItem="IlK-tp-SmG" firstAttribute="top" secondItem="JUz-q9-pFg" secondAttribute="bottom" id="XpI-ji-Di8"/>
                             <constraint firstAttribute="trailing" secondItem="U91-BR-xTz" secondAttribute="trailing" id="nt1-gG-wfV"/>
-                            <constraint firstItem="IlK-tp-SmG" firstAttribute="top" secondItem="DXP-Ba-feS" secondAttribute="bottom" constant="44" id="okH-Cy-kAB"/>
+                            <constraint firstItem="DXP-Ba-feS" firstAttribute="bottom" secondItem="IlK-tp-SmG" secondAttribute="centerY" constant="-44" id="okH-Cy-kAB"/>
                             <constraint firstAttribute="trailing" secondItem="DXP-Ba-feS" secondAttribute="trailing" id="vtV-na-HTG"/>
                             <constraint firstItem="DXP-Ba-feS" firstAttribute="top" secondItem="6DY-hE-bZQ" secondAttribute="top" id="yds-NB-0bf"/>
                             <constraint firstItem="U91-BR-xTz" firstAttribute="top" secondItem="6DY-hE-bZQ" secondAttribute="bottom" id="z5X-cM-MXv"/>
